# discord-bot

./: bot.py  pyproject.toml
