[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["ovvosystem <ovvo.system@gmail.com>"]
readme = "README.md"
packages = [{include = "discord_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
discord = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
